--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,36 @@
 version: '3.3'
 services:
 
-  frontend:
+  fg-db:
+    image: postgres:13.0-alpine
+    restart: always
+    volumes:
+      - pg_data:/var/lib/postgresql/data/
+    env_file:
+      - ../backend/foodgram/.env
+
+  fg-srv:
+    build:
+      context: ../backend/foodgram
+      dockerfile: Dockerfile
+    image: vtlbz/foodgram-back:lastest
+    restart: always
+    volumes:
+      - static_value:/foodgram/static/
+      - media_value:/foodgram/media/
+    depends_on:
+      - fg-db
+    env_file:
+      - ../backend/foodgram/.env
+
+  fg-frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+    image: vtlbz/foodgram-front:lastest
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +39,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - fg-srv
+      - fg-frontend
+
+volumes:
+  pg_data:
+  static_value:
+  media_value:
