--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,32 @@
 server {
     listen 80;
+    server_name 127.0.0.1 jstlnk.click;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /static/admin/ {
+        root /var/html/;
+      }
+    location /media/ {
+        root /var/html/;
+      }
+    location /admin/ {
+        add_header "Access-Control-Allow-Origin"  *;
+        proxy_pass              http://fg-srv:8000/admin/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+      }
+    location /api/ {
+        add_header "Access-Control-Allow-Origin"  *;
+        proxy_pass              http://fg-srv:8000/api/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+      }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
