--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,14 @@
-name: FoodGram workflow
+name: Deploy FoodGram
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - master
+      - main
 
 jobs:
   tests:
+    name: Running Tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -14,16 +17,13 @@ jobs:
       with:
         python-version: 3.7
     - name: Install dependencies
-      run: | 
-        python -m pip install --upgrade pip 
+      run: |
+        python -m pip install --upgrade pip
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt 
-
-    - name: Test with flake8 and django tests
+        pip install -r backend/foodgram/requirements.txt
+    - name: Test with flake8
       run: |
         python -m flake8
-        cd infra_project/
-        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -39,31 +39,40 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
+      - name: Push Backend to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: ./backend/foodgram/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/infra_act:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-back:lastest
+      - name: Push Frontend to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-front:lastest
 
   deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
+    name: Execute commands to deploy
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          # passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
           script: |
-            # Выполняет pull образа с DockerHub
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_act:latest
-            #остановка всех контейнеров
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra_act:latest
+            sudo docker compose stop
+            sudo docker compose rm -f fg-srv
+            sudo docker compose pull fg-srv
+            sudo docker compose up --build -d
+            sudo docker compose exec -T fg-srv python manage.py migrate
+            sudo docker system prune -f
 
   send_message:
+    name: Send 'OK' message via Telegram
     runs-on: ubuntu-latest
     needs: deploy
     steps:
