--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
         pip install -r backend/foodgram/requirements.txt
     - name: Test with flake8
       run: |
+        cd backend/foodgram/
         python -m flake8
 
   build_and_push_to_docker_hub:
