--- a/backend/foodgram/setup.cfg
+++ b/backend/foodgram/setup.cfg
@@ -1,9 +1,28 @@
+[isort]
+balanced_wrapping = false
+blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx
+combine_as_imports = true
+default_section = THIRDPARTY
+force_single_line = false
+force_to_top = django
+include_trailing_comma = true
+known_third_party = django
+line_length = 79
+lines_between_types=1
+multi_line_output = 5
+skip=.git,LC_MESSAGES,.pytest-cache,.venv
+skip_glob=*/migrations/*,*/__pycache__/*,.venv/*
+use_parentheses = true
+
 [flake8]
 ignore =
-    W503
+    W503,
+    F811
 exclude =
     tests/,
-    */migrations/,
+    */migrations/*,
+    */__pycache__/,
+    .venv/*,
     venv/,
     env/
 per-file-ignores =
