--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1 jstlnk.click;
+    server_name jstlnk.click 127.0.0.1;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -15,7 +15,7 @@ server {
         root /var/html/;
       }
     location /admin/ {
-        add_header "Access-Control-Allow-Origin"  *;
+        add_header              "Access-Control-Allow-Origin"  *;
         proxy_pass              http://fg-srv:8000/admin/;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
@@ -23,7 +23,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
     location /api/ {
-        add_header "Access-Control-Allow-Origin"  *;
+        add_header              "Access-Control-Allow-Origin"  *;
         proxy_pass              http://fg-srv:8000/api/;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
@@ -31,9 +31,9 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
     location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+        root                    /usr/share/nginx/html;
+        index                   index.html index.htm;
+        try_files               $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
