--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,19 +1,24 @@
 server {
     listen 80;
     server_name jstlnk.click 127.0.0.1;
+
     location /api/docs/ {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
     }
+
     location /static/admin/ {
         root /var/html/;
       }
+
     location /static/rest_framework/ {
         root /var/html/;
       }
+
     location /media/ {
         root /var/html/;
       }
+
     location /admin/ {
         add_header              "Access-Control-Allow-Origin"  *;
         proxy_pass              http://fg-srv:8000/admin/;
@@ -22,6 +27,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
     location /api/ {
         add_header              "Access-Control-Allow-Origin"  *;
         proxy_pass              http://fg-srv:8000/api/;
@@ -30,6 +36,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
     location / {
         root                    /usr/share/nginx/html;
         index                   index.html index.htm;
@@ -39,6 +46,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
