--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 nppBackup
-db.json
-db2.json
 static/
 media/
+db_dumps/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -136,3 +135,6 @@ dmypy.json
 
 # .idea
 .idea
+
+# .vscode
+.vscode
