some fix after refractoring

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,5 +1,6 @@
 SECRET_KEY=<указать-тут-ключ-проекта>
 ALLOWED_HOSTS=<перечислить разрешенные хосты через пробел>
+DEBUG_STATE=<статус режима DEBUG>
 
 DB_ENGINE=django.db.backends.postgresql # по умолчанию работаем с postgresql
 DB_NAME=postgres # указать имя базы данных
