--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,12 @@ server {
     listen 80;
     server_name jstlnk.click 127.0.0.1;
 
+    http {
+        client_max_body_size 50M;
+        client_body_buffer_size 50M;
+        proxy_read_timeout 600;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
@@ -9,15 +15,19 @@ server {
 
     location /static/admin/ {
         root /var/html/;
-      }
+    }
 
     location /static/rest_framework/ {
         root /var/html/;
-      }
+    }
+
+    location /static/colorfield/ {
+        root /var/html/;
+    }
 
     location /media/ {
         root /var/html/;
-      }
+    }
 
     location /admin/ {
         add_header              "Access-Control-Allow-Origin"  *;
@@ -26,7 +36,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
+    }
 
     location /api/ {
         add_header              "Access-Control-Allow-Origin"  *;
@@ -35,7 +45,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
+    }
 
     location / {
         root                    /usr/share/nginx/html;
@@ -45,11 +55,11 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
+    }
 
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
-      }
+    }
 
 }
